fix(button): fix button text-align

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -4,6 +4,7 @@
 .#{$prefix}-btn {
   font-size: $button-font-size;
   line-height: $button-default-line-height;
+  text-align: center;
   background: transparent;
   border-radius: $button-border-radius;
   cursor: pointer;
